samples/_failures_safe/1761255572_457549_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2a7360e.c: In function ‘main’:
./samples/SAFE/__tmp_f2a7360e.c:140:5: error: expected expression at end of input
  140 |     if (!add_compression_block(&ctx,
      |     ^~
./samples/SAFE/__tmp_f2a7360e.c:140:10: error: too few arguments to function ‘add_compression_block’
  140 |     if (!add_compression_block(&ctx,
      |          ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f2a7360e.c:66:5: note: declared here
   66 | int add_compression_block(struct CompressionContext *ctx, const uint8_t *data, uint32_t size) {
      |     ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f2a7360e.c:140:5: error: expected declaration or statement at end of input
  140 |     if (!add_compression_block(&ctx,
      |     ^~
